@@ -1,5 +1,5 @@
-import Keys.{`package` => pack}
 import Common._
+import sbt.Keys.{`package` => pack}
 
 // Global build settings
 
@@ -27,15 +27,17 @@ addCommandAlias("packagePluginZip", "pluginCompressor/package")
 
 lazy val scalaCommunity: Project =
   newProject("scalaCommunity", file("."))
-  .dependsOn(compilerSettings, runners % "test->test;compile->compile")
+  .dependsOn(compilerSettings, scalap, runners % "test->test;compile->compile", macroAnnotations)
   .enablePlugins(SbtIdeaPlugin)
+  .settings(commonTestSettings(packagedPluginDir):_*)
   .settings(
     ideExcludedDirectories := Seq(baseDirectory.value / "testdata" / "projects"),
     javacOptions in Global ++= Seq("-source", "1.6", "-target", "1.6"),
     scalacOptions in Global += "-target:jvm-1.6",
     libraryDependencies ++= DependencyGroups.scalaCommunity,
     unmanagedJars in Compile +=  file(System.getProperty("java.home")).getParentFile / "lib" / "tools.jar",
-    unmanagedJars in Compile ++= unmanagedJarsFrom(sdkDirectory.value, "scalap", "nailgun", "scalastyle"),
+    unmanagedJars in Compile ++= unmanagedJarsFrom(sdkDirectory.value, "nailgun"),
+    addCompilerPlugin(Dependencies.macroParadise),
     ideaInternalPlugins := Seq(
       "copyright",
       "gradle",
@@ -47,24 +49,10 @@ lazy val scalaCommunity: Project =
       "junit",
       "properties"
     ),
-    ideaInternalPluginsJars <<= (ideaInternalPluginsJars).map { classpath =>
+    ideaInternalPluginsJars <<= ideaInternalPluginsJars.map { classpath =>
       classpath.filterNot(_.data.getName.contains("lucene-core"))
     },
     aggregate.in(updateIdea) := false,
-    // jar hell workaround(ignore idea bundled lucene in test runtime)
-    fullClasspath in Test <<= fullClasspath.in(Test).map(filterTestClasspath),
-    fork in Test := true,
-    parallelExecution := false,
-    javaOptions in Test := Seq(
-      //  "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005",
-      "-Xms128m",
-      "-Xmx1024m",
-      "-XX:MaxPermSize=350m",
-      "-ea",
-      s"-Didea.system.path=$testSystemDir",
-      s"-Didea.config.path=$testConfigDir",
-      s"-Dplugin.path=${baseDirectory.value}/out/plugin/Scala"
-    ),
     test in Test <<= test.in(Test).dependsOn(setUpTestEnvironment),
     testOnly in Test <<= testOnly.in(Test).dependsOn(setUpTestEnvironment)
   )
@@ -94,11 +82,27 @@ lazy val nailgunRunners =
   .dependsOn(scalaRunner)
   .settings(unmanagedJars in Compile ++= unmanagedJarsFrom(sdkDirectory.value, "nailgun"))
 
+lazy val scalap =
+  newProject("scalap", file("scalap"))
+    .settings(commonTestSettings(packagedPluginDir):_*)
+    .settings(libraryDependencies ++= DependencyGroups.scalap)
+
+lazy val scalaDevPlugin =
+  newProject("scalaDevPlugin", file("SDK/scalaDevPlugin"))
+  .settings(unmanagedJars in Compile := ideaMainJars.in(scalaCommunity).value)
+
+lazy val macroAnnotations =
+  newProject("macroAnnotations", file("macroAnnotations"))
+  .settings(Seq(
+    addCompilerPlugin(Dependencies.macroParadise),
+    libraryDependencies ++= Seq(Dependencies.scalaReflect, Dependencies.scalaCompiler)
+  ): _*)
+
 // Utility projects
 
 lazy val ideaRunner =
   newProject("ideaRunner", file("idea-runner"))
-  .dependsOn(Seq(compilerSettings, scalaRunner, runners, scalaCommunity, jpsPlugin, nailgunRunners).map(_ % Provided): _*)
+  .dependsOn(Seq(compilerSettings, scalaRunner, runners, scalaCommunity, jpsPlugin, nailgunRunners, scalap).map(_ % Provided): _*)
   .settings(
     autoScalaLibrary := false,
     unmanagedJars in Compile := ideaMainJars.in(scalaCommunity).value,
@@ -144,7 +148,16 @@ lazy val testDownloader =
       "org.scalatest" % "scalatest_2.11" % "2.1.7",
       "org.scalatest" % "scalatest_2.10" % "1.9.2",
       "com.chuusai" % "shapeless_2.11" % "2.0.0"
-    )
+    ),
+    update <<= update.dependsOn(update.in(sbtLaunchTestDownloader))
+  )
+
+lazy val sbtLaunchTestDownloader =
+  newProject("sbtLaunchTestDownloader")
+  .settings(
+    autoScalaLibrary := false,
+    conflictManager := ConflictManager.all,
+    libraryDependencies ++= DependencyGroups.sbtLaunchTestDownloader
   )
 
 // Testing keys and settings
@@ -170,13 +183,16 @@ concurrentRestrictions in Global := Seq(
   Tags.limit(Tags.Test, 1)
 )
 
-
 // Packaging projects
+
+lazy val packagedPluginDir = settingKey[File]("Path to packaged, but not yet compressed plugin")
+
+packagedPluginDir in ThisBuild := baseDirectory.in(ThisBuild).value / "out" / "plugin" / "Scala"
 
 lazy val pluginPackager =
   newProject("pluginPackager")
   .settings(
-    artifactPath := baseDirectory.in(ThisBuild).value / "out" / "plugin" / "Scala",
+    artifactPath := packagedPluginDir.value,
     dependencyClasspath <<= (
       dependencyClasspath in (scalaCommunity, Compile),
       dependencyClasspath in (runners, Compile),
@@ -207,6 +223,8 @@ lazy val pluginPackager =
       val lib = Seq(
         Artifact(pack.in(scalaCommunity, Compile).value,
           "lib/scala-plugin.jar"),
+        Artifact(pack.in(scalap, Compile).value,
+          "lib/scalap.jar"),
         Artifact(pack.in(compilerSettings, Compile).value,
           "lib/compiler-settings.jar"),
         Artifact(pack.in(nailgunRunners, Compile).value,
@@ -216,11 +234,7 @@ lazy val pluginPackager =
             pack.in(scalaRunner, Compile).value),
           "lib/scala-plugin-runners.jar"),
         Library(Dependencies.scalaLibrary,
-          "lib/scala-library.jar"),
-        Directory(sdkDirectory.value / "scalap",
-          "lib"),
-        Directory(sdkDirectory.value / "scalastyle",
-          "lib")
+          "lib/scala-library.jar")
       ) ++
         crossLibraries.map { lib =>
           Library(lib.copy(name = lib.name + "_2.11"), s"lib/${lib.name}.jar")
@@ -245,3 +259,7 @@ lazy val pluginCompressor =
       artifactPath.value
     }
   )
+
+TaskKey[Unit]("buildDevPlugin") := {
+  (packageBin in (scalaDevPlugin, Compile)).value
+}
